# ChangeLog for app-misc/cdircmp
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/cdircmp/ChangeLog,v 1.14 2010/09/17 05:05:40 jer Exp $

*cdircmp-0.3-r1 (17 Sep 2010)

  17 Sep 2010; Jeroen Roovers <jer@gentoo.org> +cdircmp-0.3-r1.ebuild:
  Respect LDFLAGS (bug #335584).

  30 Dec 2008; Christoph Mende <angelos@gentoo.org> cdircmp-0.3.ebuild:
  QA: Respect CC (bug 243622) and CFLAGS (bug 240064)

  27 Jun 2008; Thomas Anderson <gentoofan23@gentoo.org> cdircmp-0.3.ebuild:
  keyworded ~arch for amd64, bug 228795

  21 Apr 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Fix up metadata.xml. If there's no maintainer for the package, the metadata
  also needs to contain m-needed@g.o.

  26 Mar 2008; Raúl Porcel <armin76@gentoo.org> cdircmp-0.3.ebuild:
  alpha/x86 stable

  31 May 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove myself as I'm retiring.

  22 Mar 2005; Bryan Østergaard <kloeri@gentoo.org> cdircmp-0.3.ebuild:
  Add ~alpha keyword.

  16 Jan 2005; Michael Hanselmann <hansmi@gentoo.org> cdircmp-0.3.ebuild:
  Added to ~ppc, bug 78203.

  02 Jan 2005; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  04 Oct 2004; Bryan Østergaard <kloeri@gentoo.org> cdircmp-0.3.ebuild:
  Clean up ebuild.

  12 Jul 2004; Bryan Østergaard <kloeri@gentoo.org> cdircmp-0.3.ebuild:
  Use default src_compile.

*cdircmp-0.3 (02 May 2004)

  02 May 2004; Bryan Østergaard <kloeri@gentoo.org> +metadata.xml,
  +cdircmp-0.3.ebuild:
  Initial import, bug #48249.
