@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/cdircmp
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/cdircmp/ChangeLog,v 1.14 2010/09/17 05:05:40 jer Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/cdircmp/ChangeLog,v 1.15 2011/12/18 20:18:30 phajdan.jr Exp $
+
+  18 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> cdircmp-0.3-r1.ebuild:
+  x86 stable wrt bug #393719
 
 *cdircmp-0.3-r1 (17 Sep 2010)
 
